tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions12(target=es5).errors.txt
unicodeExtendedEscapesInRegularExpressions12.ts(1,13): error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
unicodeExtendedEscapesInRegularExpressions12.ts(1,24): error TS1501: This regular expression flag is only available when targeting 'es6' or later.


==== unicodeExtendedEscapesInRegularExpressions12.ts (2 errors) ====
    var x = /\u{FFFFFFFF}/gu;
                ~~~~~~~~
!!! error TS1198: An extended Unicode escape value must be between 0x0 and 0x10FFFF inclusive.
                           ~
!!! error TS1501: This regular expression flag is only available when targeting 'es6' or later.
    